# piano-sequencer

./: .gitignore  Claude.md  Makefile  README.md  main.py  pyproject.toml  sequence.json
docs/: sequence-json-guide.md
nursery_rhymes/: README.md  baa_baa_black_sheep.json  frere_jacques.json  hot_cross_buns.json  london_bridge.json  mary_had_a_little_lamb.json  row_row_row_your_boat.json  three_blind_mice.json  twinkle_twinkle_little_star.json
piano_sequencer/: __init__.py  compiler.py  export.py  main.py  models.py  notes.py  parser.py  synth.py
tests/: test_sequencer.py
